# create-jira-support-ticket

./: .gitignore  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.cfg
src/cst/: __init__.py  cli.py  support_ticket.py
src/cst/templates/: bug.md  support.md
