[metadata]
name = create-support-ticket
version = attr: cst.VERSION
author = John Woffindin
description = Helper for creating JIRA tickets for ad-hoc support requests
keywords = jira
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
zip_safe = False
install_requires =
    click
    click-aliases
    jira
    jinja2
    pyyaml
    setuptools
packages = find:
package_dir =
    =src
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cst = cst.cli:create_issue
